          _              __            _   _
 _ __ ___| |_ _ __ ___  / _| ___  _ __| |_| |__
| '__/ _ \ __| '__/ _ \| |_ / _ \| '__| __| '_ \
| | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |
|_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_|
                                          for nga
# RetroForth/nga 2023.9 Release Notes

================================================================

* nga-c: split device code into separate source files
* use hashed dictionary search by default
* removed words deprecated in 2022.8
* new example: konilo-wiki.retro
* GNUmakefile fix from drakonis

================================================================

Development Notes:

It is likely that starting with this release, the source
distribution will default to building an executable from
the amalgamation (example/amalgamate.retro) rather than
rebuilding the image with each build. A new Makefile target
will be added for those wanting or needing to build a
custom ngaImage.

================================================================